// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalBoxTitle alert variant 1`] = `
<DocumentFragment>
  <h1
    class="pf-v6-c-modal-box__title pf-m-icon pf-m-warning"
    id="boxId"
  >
    <span
      class="pf-v6-c-modal-box__title-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        width="1em"
      >
        <svg
          class="pf-v6-icon-default"
          viewBox="0 0 576 512"
        >
          <path
            d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
        <svg
          class="pf-v6-icon-unified"
          viewBox="0 0 32 32"
        >
          <path
            d="M31.461 27.771 17.3 2.301a1.499 1.499 0 0 0-2.623 0L.517 27.771c-.261.469-.255 1.025.018 1.489s.756.74 1.294.74h28.322c.537 0 1.021-.276 1.293-.74a1.49 1.49 0 0 0 .018-1.489ZM2.678 28l13.31-23.942L29.3 28H2.678ZM16 11.75c.69 0 1.25.56 1.25 1.25v5a1.25 1.25 0 0 1-2.5 0v-5c0-.69.56-1.25 1.25-1.25Zm1.75 12.261a1.75 1.75 0 1 1-3.501-.001 1.75 1.75 0 0 1 3.501.001Z"
          />
        </svg>
      </svg>
    </span>
    <span
      class="pf-v6-screen-reader"
    >
      Warning alert:
    </span>
    <span
      class="pf-v6-c-modal-box__title-text"
    >
      Test Modal Box warning
    </span>
  </h1>
</DocumentFragment>
`;

exports[`ModalBoxTitle custom icon variant 1`] = `
<DocumentFragment>
  <h1
    class="pf-v6-c-modal-box__title pf-m-icon"
    id="boxId"
  >
    <span
      class="pf-v6-c-modal-box__title-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 576 512"
        width="1em"
      >
        <path
          d="M576 240c0-23.63-12.95-44.04-32-55.12V32.01C544 23.26 537.02 0 512 0c-7.12 0-14.19 2.38-19.98 7.02l-85.03 68.03C364.28 109.19 310.66 128 256 128H64c-35.35 0-64 28.65-64 64v96c0 35.35 28.65 64 64 64h33.7c-1.39 10.48-2.18 21.14-2.18 32 0 39.77 9.26 77.35 25.56 110.94 5.19 10.69 16.52 17.06 28.4 17.06h74.28c26.05 0 41.69-29.84 25.9-50.56-16.4-21.52-26.15-48.36-26.15-77.44 0-11.11 1.62-21.79 4.41-32H256c54.66 0 108.28 18.81 150.98 52.95l85.03 68.03a32.023 32.023 0 0 0 19.98 7.02c24.92 0 32-22.78 32-32V295.13C563.05 284.04 576 263.63 576 240zm-96 141.42l-33.05-26.44C392.95 311.78 325.12 288 256 288v-96c69.12 0 136.95-23.78 190.95-66.98L480 98.58v282.84z"
        />
      </svg>
    </span>
    <span
      class="pf-v6-c-modal-box__title-text"
    >
      Test Modal Box custom
    </span>
  </h1>
</DocumentFragment>
`;

exports[`ModalBoxTitle custom variant 1`] = `
<DocumentFragment>
  <h1
    class="pf-v6-c-modal-box__title pf-m-icon pf-m-custom"
    id="boxId"
  >
    <span
      class="pf-v6-c-modal-box__title-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        width="1em"
      >
        <svg
          class="pf-v6-icon-default"
          viewBox="0 0 896 1024"
        >
          <path
            d="M448,0 C465.333333,0 480.333333,6.33333333 493,19 C505.666667,31.6666667 512,46.6666667 512,64 L512,106 L514.23,106.45 C587.89,121.39 648.48,157.24 696,214 C744,271.333333 768,338.666667 768,416 C768,500 780,568.666667 804,622 C818.666667,652.666667 841.333333,684 872,716 C873.773676,718.829136 875.780658,721.505113 878,724 C890,737.333333 896,752.333333 896,769 C896,785.666667 890,800.333333 878,813 C866,825.666667 850.666667,832 832,832 L63.3,832 C44.9533333,831.84 29.8533333,825.506667 18,813 C6,800.333333 0,785.666667 0,769 C0,752.333333 6,737.333333 18,724 L24,716 L25.06,714.9 C55.1933333,683.28 77.5066667,652.313333 92,622 C116,568.666667 128,500 128,416 C128,338.666667 152,271.333333 200,214 C248,156.666667 309.333333,120.666667 384,106 L384,63.31 C384.166667,46.27 390.5,31.5 403,19 C415.666667,6.33333333 430.666667,0 448,0 Z M576,896 L576,897.08 C575.74,932.6 563.073333,962.573333 538,987 C512.666667,1011.66667 482.666667,1024 448,1024 C413.333333,1024 383.333333,1011.66667 358,987 C332.666667,962.333333 320,932 320,896 L576,896 Z"
          />
        </svg>
        <svg
          class="pf-v6-icon-unified"
          viewBox="0 0 32 32"
        >
          <path
            d="M28 21c-1.103 0-2-.897-2-2v-4c0-4.885-3.523-8.955-8.159-9.823.405-.445.659-1.03.659-1.677C18.5 2.122 17.379 1 16 1s-2.5 1.122-2.5 2.5c0 .647.254 1.233.659 1.677C9.523 6.045 6 10.115 6 15v4c0 1.103-.897 2-2 2a1 1 0 0 0-1 1v3.5c0 .827.673 1.5 1.5 1.5H12c0 2.206 1.794 4 4 4s4-1.794 4-4h7.5c.827 0 1.5-.673 1.5-1.5V22a1 1 0 0 0-1-1Zm-1 4H5v-2.126A4.006 4.006 0 0 0 8 19v-4c0-4.411 3.589-8 8-8s8 3.589 8 8v4a4.008 4.008 0 0 0 3 3.874V25Z"
          />
        </svg>
      </svg>
    </span>
    <span
      class="pf-v6-screen-reader"
    >
      Custom alert:
    </span>
    <span
      class="pf-v6-c-modal-box__title-text"
    >
      Test Modal Box custom
    </span>
  </h1>
</DocumentFragment>
`;

exports[`ModalBoxTitle danger variant 1`] = `
<DocumentFragment>
  <h1
    class="pf-v6-c-modal-box__title pf-m-icon pf-m-danger"
    id="boxId"
  >
    <span
      class="pf-v6-c-modal-box__title-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        width="1em"
      >
        <svg
          class="pf-v6-icon-default"
          viewBox="0 0 512 512"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
        <svg
          class="pf-v6-icon-unified"
          viewBox="0 0 32 32"
        >
          <path
            d="M14.75 16V9a1.25 1.25 0 0 1 2.5 0v7a1.25 1.25 0 0 1-2.5 0ZM31 16c0 8.271-6.729 15-15 15S1 24.271 1 16 7.729 1 16 1s15 6.729 15 15Zm-2 0c0-7.168-5.832-13-13-13S3 8.832 3 16s5.832 13 13 13 13-5.832 13-13Zm-13 4.261a1.75 1.75 0 1 0 .001 3.501A1.75 1.75 0 0 0 16 20.261Z"
          />
        </svg>
      </svg>
    </span>
    <span
      class="pf-v6-screen-reader"
    >
      Danger alert:
    </span>
    <span
      class="pf-v6-c-modal-box__title-text"
    >
      Test Modal Box danger
    </span>
  </h1>
</DocumentFragment>
`;

exports[`ModalBoxTitle info variant 1`] = `
<DocumentFragment>
  <h1
    class="pf-v6-c-modal-box__title pf-m-icon pf-m-info"
    id="boxId"
  >
    <span
      class="pf-v6-c-modal-box__title-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        width="1em"
      >
        <svg
          class="pf-v6-icon-default"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
          />
        </svg>
        <svg
          class="pf-v6-icon-unified"
          viewBox="0 0 32 32"
        >
          <path
            d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm0 28C8.832 29 3 23.168 3 16S8.832 3 16 3s13 5.832 13 13-5.832 13-13 13Zm1.25-13v7a1.25 1.25 0 0 1-2.5 0v-5.465l-.49.104a1.25 1.25 0 0 1-.519-2.445l1.956-.416c.763-.157 1.554.446 1.554 1.223Zm.5-5.998a1.75 1.75 0 1 1-3.501-.001 1.75 1.75 0 0 1 3.501.001Z"
          />
        </svg>
      </svg>
    </span>
    <span
      class="pf-v6-screen-reader"
    >
      Info alert:
    </span>
    <span
      class="pf-v6-c-modal-box__title-text"
    >
      Test Modal Box info
    </span>
  </h1>
</DocumentFragment>
`;

exports[`ModalBoxTitle success variant 1`] = `
<DocumentFragment>
  <h1
    class="pf-v6-c-modal-box__title pf-m-icon pf-m-success"
    id="boxId"
  >
    <span
      class="pf-v6-c-modal-box__title-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        width="1em"
      >
        <svg
          class="pf-v6-icon-default"
          viewBox="0 0 512 512"
        >
          <path
            d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          />
        </svg>
        <svg
          class="pf-v6-icon-unified"
          viewBox="0 0 32 32"
        >
          <path
            d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm0 28C8.832 29 3 23.168 3 16S8.832 3 16 3s13 5.832 13 13-5.832 13-13 13Zm7.707-17.707a.999.999 0 0 1 0 1.414l-8.646 8.646c-.292.292-.676.438-1.061.438s-.768-.146-1.061-.438l-4.646-4.646a.999.999 0 1 1 1.414-1.414L14 19.586l8.293-8.293a.999.999 0 0 1 1.414 0Z"
          />
        </svg>
      </svg>
    </span>
    <span
      class="pf-v6-screen-reader"
    >
      Success alert:
    </span>
    <span
      class="pf-v6-c-modal-box__title-text"
    >
      Test Modal Box success
    </span>
  </h1>
</DocumentFragment>
`;
